# zarr-layer-examples

./: .gitignore  README.md  setup.sh
app/: basic_example.html  index.html  private_s3_example.html  public_s3_example.html  rainy_day_example.html  wherobots_example.html
python/: README.md  create_example_zarr.py  pyproject.toml
