[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "dask>=2025.10.0",
    "fsspec>=2025.10.0",
    "ndpyramid>=0.4.0",
    "odc-geo>=0.4.10",
    "pyresample>=1.34.2",
    "requests>=2.32.5",
    "rioxarray>=0.20.0",
    "s3fs>=2025.10.0",
    "xarray>=2025.10.1",
    "zarr>=3.1.3",
]
